Stop messing with the enabled property of actions in the action collection

Instead, just disable the graphical elements in the UI explicitly.
It wasn't a good idea as shown in the bug report, it's not being used by
Discover anymore either, so it's preferable to keep track of the actions'
states explicitly anyway.

BUG: 349787